deploy/haproxy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haproxy-deploy
  labels:
    app: haproxy
    app.openshift.io/runtime: haproxy
  annotations:
    app.openshift.io/connects-to: '[ "nginx-html-server",  "fib-service-in-go",  "fib-service-in-quarkus",  "fib-service-in-node"]'
    container.apparmor.security.beta.kubernetes.io/haproxy-deploy: runtime/default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: haproxy
  template:
    metadata:
      labels:
        app: haproxy
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
        - name: haproxy-deploy
          image: docker.io/jduimovich/haproxy:a3b1777
          resources:
            limits:
              cpu: "200m"
              memory: "128Mi"
            requests:
              cpu: "100m"
              memory: "128Mi"
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            initialDelaySeconds: 2
            periodSeconds: 5
            httpGet:
              path: /health
              port: 8080
          securityContext:
            capabilities:
              drop:
                - all
            readOnlyRootFilesystem: true
