deploy/haproxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: haproxy-service
  labels:
    app: haproxy-service
spec:
  selector:
    app: haproxy
  ports:
  - port: 8080
    targetPort: 8080
