deploy/haproxy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: fe 
  labels:
    app: haproxy-service
spec: 
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: haproxy-service
    weight: 100
